src/components/startInfo/StartInfo.module.css
.info {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 0.5rem;
    line-height: 1rem;
    position: absolute;
    top: 15%;
    left: 100;
    right: 100;
    border: 2px solid black;
    border-radius: 40px;
    height: fit-content;
    width: 500px;
    opacity: 95%;
    padding: 15px;
}

.paragraph {
    font-size: 0.5rem;
    line-height: 1rem;
    word-wrap: break-word;
}

.colors {
    line-height: 0.5rem;
}

.toggleButton {
    height: 50px;
    width: 30%;
    background-color: black;
    color: white;
    font-weight: 700;
    font-size: 20px;
    margin: 1rem 0;
    border-radius: 15px;
}

.toggleButton:hover {
    cursor: pointer;
    color: #ea9615;
    background-color: #1569EA;
}

